[tool.poetry]
name = "masters-thesis"
version = "0.1.0"
description = ""
authors = ["Diogo Alves"]
readme = "README.md"
packages = [{include = "masters_thesis"}]

[tool.poetry.dependencies]
python = "3.10.6"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
plotly = "^5.18.0"
tensorflow-metal = "^1.1.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
